# smvs-prod

./: .gitignore  Dockerfile  LICENSE  README.md  client_secrets.json  scp.sh
.github/workflows/: amd.yml  arm.yml  cleans3.yml  push.yml  worker.yml
cleans3/: Dockerfile  buckets.js  buckets.mjs  index.js  package-lock.json  package.json
fakerabbitmq/: receiver.py  sender.py
fakerabbitmq/js/: index.js
fakerabbitmq/python/: sender.py
fakerabbitmq/serverjs/: index.js
minio/: as2.yml  raichu2.yml  test.yml
old/fakerabbitmq/js/: Dockerfile  index.js  package.json
old/fakerabbitmq/python/: receiver.py
old/minio/: all.yml  hosts  nginx.conf
old/server/: buckets.mjs  cleans3.mjs  index.js
server/: ampq.mjs  index.js  package.json
worker/: Dockerfile  app.py  baffie.py  build.sh  clear_queue.py  compose.yml  dev.py  emojis.py  firestore.py  firestore.sh  gen.py  launch.sh  lists3.py  processing.py  pyproject.toml  requirements.txt  s3.py  silent.py  simu.py  styles.py  temp.py  tempfix.md  testdata.py  tests3.py  translate.py  treat.py  utils.py
worker/dev_test/: prompt.md
worker/docker/: Dockerfile  arm.Dockerfile  cuda.Dockerfile  source.md
worker/test/: arrayprompt.md  prompt.md
