[project]
name = "worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argostranslate>=1.9.6",
    "ffmpeg-python>=0.2.0",
    "minio>=7.2.15",
    "moviepy>=2.1.2",
    "opencv-python>=4.11.0.86",
    "pika>=1.3.2",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "whisperx",
]

[tool.uv.sources]
whisperx = { git = "https://github.com/Hasan-Naseer/whisperX.git" }
